[MAJ + feature] Rationalisation des templates, maj css, ajout d'un champ date de modification d'un article, d?but de l'int?gration d'une nouvelle fonctionnalit? pour placer le curseur du champ Contenu au texte concernant la page que l'on viualise lorsqu'on passe en ?dition, int?gration des microdonn?es ? venir dans un commit subs?quent

--- a/articles/templates/articles.css
+++ b/articles/templates/articles.css
@@ -180,9 +180,15 @@ span.caret{
 .article_content article:hover > .article_tools img{ opacity:0.5; }
 .article_content_list_view article:hover > .article_tools img{ opacity:0.5; }
 
+.article_content header {
+	height: 118px;
+	max-height: 138px;
+}
+
 .article_content_list_view header {
 	margin-left:150px;
 	padding:0 0 10px 10px;
+	max-height: 54px;
 }
 .article_content h3 {
 	font-size: 14px;
@@ -203,12 +209,14 @@ span.caret{
 	font-style:italic;
 	padding-bottom: 10px;
 	display: block;
+	max-height: 48px;
 }
 
 .article_content_list_view article header span{
 	font-size: 11px;
 	font-style:italic;
 	display: block;
+	max-height: 18px;
 }
 
 .article_content article figure {
@@ -247,7 +255,7 @@ span.caret{
 
 .article_content_list_view .description {
 	margin-left:150px;
-	width:500px;
+	width:510px;
 	height:60px;
 	max-height:60px;
 	padding:0 0 10px 10px;
